Fixed smooth scrolling on mobile

--- a/includes/sass/about.sass
+++ b/includes/sass/about.sass
@@ -65,6 +65,6 @@
           color: $player-id
           width: inherit
 
-@media screen and (max-width: 412px)
+@media screen and (max-width: 300px)
   #about
     height: auto
