--- a/includes/sass/home.sass
+++ b/includes/sass/home.sass
@@ -1,5 +1,4 @@
 #home
-  height: calc(100vh + 5px)
 
   #home-bg
     position: absolute
