--- a/includes/sass/social.sass
+++ b/includes/sass/social.sass
@@ -19,7 +19,7 @@
     width: 100%
     height: 120px
 
-@media screen and (max-width: 412px)
+@media screen and (max-width: 300px)
   #social
     height: auto
 
